局部变量, 静态变量引用的对象可作为GCRoots